[gd_scene load_steps=9 format=2]

[ext_resource path="res://main_game/PowerUps/PowerUpCofee.gd" type="Script" id=1]
[ext_resource path="res://main_game/PowerUps/cofee.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.800738 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0 ), 0.0, -0.140167, 0, 0, Vector2( 0.748092, 1 ), -0.129156, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Gravity", "Scale", "Trail" ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 81.8326, 63.3689 )

[node name="CofeePowerUp" type="Area2D" index="0" groups=[
"obstacles",
]]

z_index = 3
z_as_relative = false
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable", "Z Index" ]
acceleration_multiplyer = 2.0
duration = 3.0

[node name="SFX" type="Particles2D" parent="." index="0"]

emitting = true
amount = 1
lifetime = 0.8
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

modulate = Color( 1, 0.847778, 0.328125, 1 )
position = Vector2( 0, 0.169071 )
scale = Vector2( 0.459733, 0.661854 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionArea" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 6 )

[node name="VisibilityCheck" type="VisibilityNotifier2D" parent="." index="3"]

position = Vector2( -1.00001, -0.343936 )
scale = Vector2( 8.21691, 6.36884 )
rect = Rect2( -10, -10, 20, 20 )

[connection signal="body_entered" from="." to="." method="_on_CofeePowerUp_body_entered"]

[connection signal="screen_entered" from="VisibilityCheck" to="." method="_on_VisibilityNotifier2D_screen_entered"]

[connection signal="screen_exited" from="VisibilityCheck" to="." method="_on_VisibilityNotifier2D_screen_exited"]


